--- a/platformio.ini
+++ b/platformio.ini
@@ -11,7 +11,7 @@
 [env:d1]
 platform = espressif8266
 board = d1_mini
-# build_type = debug
+build_type = debug
 # monitor_filters = esp8266_exception_decoder
 board_build.mcu = esp8266
 board_build.f_cpu = 80000000L
