--- a/platformio.ini
+++ b/platformio.ini
@@ -17,7 +17,9 @@ board_build.mcu = esp8266
 board_build.f_cpu = 80000000L
 framework = arduino
 monitor_speed = 115200
-upload_port = /dev/ttyUSB0
+; upload_port = /dev/ttyUSB0
+upload_protocol = espota
+upload_port = ePi_NTP_clk.local
 upload_speed = 921600
 build_flags = -I$PROJECT_DIR/include/
 lib_deps = 
